# surrealdb-schema-derive

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: errors.rs  lib.rs
impl/src/codegen/: crud_statements.rs  define_statements.rs  mod.rs  object_conversion.rs  object_display.rs  row_struct.rs  types.rs
impl/src/runtime/: mod.rs  reference.rs  surreal_execution.rs  surreal_value_primitives.rs
impl/src/snapshots/: surrealdb_obj_derive_impl__tests__derives_simple_struct-2.snap  surrealdb_obj_derive_impl__tests__derives_simple_struct.snap
macro/: Cargo.toml
macro/src/: lib.rs
src/: into_value.rs  lib.rs
tests/: id_test.rs
