[package]
description = "a derive from surrealdb-schema-derive"
edition = "2021"
license = "MIT"
name = "surrealdb-obj-derive"
repository = "https://github.com/huang12zheng/surrealdb-schema-derive/"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb-obj-derive-impl = {version = "=0.1.1", path = "impl"}
surrealdb-obj-derive-macro = {version = "=0.1.1", path = "macro"}
# surrealdb = { version = "1.0.0-beta.8", default-features = false, features=["kv-mem"]}

anyhow = "1.0.66"
async-trait = "0.1.58"

[workspace]
default-members = [".", "impl"]
members = [".", "impl", "macro"]

[dependencies.surrealdb]
default-features = false
features = ["kv-rocksdb", "parallel"]
path = "../surrealdb/lib"
version = "^1.0.0-beta.8"
