[package]
edition = "2021"
name = "surrealdb-schema-derive"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
surrealdb = {version = "1.0.0-beta.8", default-features = false, features = ["kv-mem", "parallel"]}
surrealdb-schema-derive-impl = {version = "=0.1.0", path = "impl"}
surrealdb-schema-derive-macro = {version = "=0.1.0", path = "macro"}

[workspace]
default-members = [".", "impl"]
members = [".", "impl", "macro"]

[dev-dependencies.tokio]
features = ["full"]
version = "^1.22.0"
