[package]
description = "a derive from surrealdb-schema-derive,only feat obj"
edition = "2021"
license = "MIT"
name = "surrealdb-obj-derive-impl"
repository = "https://github.com/huang12zheng/surrealdb-schema-derive/"
version = "0.1.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["full", "extra-traits"]}

anyhow = "1.0.66"
async-trait = "0.1.58"
derive_builder = "0.11.2"
thiserror = "1.0.37"

[dev-dependencies]
prettyplease = "0.1.21"

[dependencies.surrealdb]
default-features = false
features = ["kv-rocksdb", "parallel"]
path = "../../surrealdb/lib"
version = "^1.0.0-beta.8"
