[package]
edition = "2021"
name = "surrealdb-obj-derive-macro"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
surrealdb-obj-derive-impl = {version = "=0.1.0", path = "../impl"}
syn = {version = "1", features = ["full", "extra-traits"]}
